# process-recorder

./: .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  REQUIREMENTS.md  ROADMAP.md  SPRINT_0_COMPLETE.md  SPRINT_1_COMPLETE.md  SPRINT_2_COMPLETE.md  SPRINT_3_COMPLETE.md  SPRINT_4_COMPLETE.md  SPRINT_5_COMPLETE.md  TEST_PLAN.md  USER_GUIDE.md
src/process_recorder/: __init__.py  config.py  main.py  models.py
src/process_recorder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/process_recorder/controller/: __init__.py  app_controller.py
src/process_recorder/gui/: __init__.py  main_window.py  recording_panel.py  replay_panel.py  settings_dialog.py  styles.py  workflow_list.py
src/process_recorder/learner/: __init__.py  action_classifier.py  semantic_extractor.py  workflow_processor.py
src/process_recorder/recorder/: __init__.py  event_listener.py  recording_session.py  screen_capturer.py
src/process_recorder/replayer/: __init__.py  action_executor.py  element_finder.py  replay_engine.py
src/process_recorder/vision/: __init__.py  base.py  claude_adapter.py  factory.py  ollama_adapter.py  prompts.py
tests/: conftest.py
tests/integration/: test_e2e_pipeline.py
tests/unit/: test_action_classifier.py  test_action_executor.py  test_element_finder.py  test_event_listener.py  test_gui_components.py  test_models.py  test_recording_session.py  test_replay_engine.py  test_screen_capturer.py  test_semantic_extractor.py  test_vision_adapter.py  test_workflow_processor.py
